Searching and posting works
aaa

--- a/GenericBlogBetaDocumentationen.html
+++ b/GenericBlogBetaDocumentationen.html
@@ -23,8 +23,15 @@
     <p>unsets session related data and returns you to index </p>
     <h2>Item 6. register.php</h2>
     <p>wow an actual registration page, has some filters like 3-8 characters in username?? or at least 8 characters in password</p>
-    <h2>Last item. utils.php</h2>
+    <h2>Item 7. utils.php</h2>
     <p>Currently only has login-related functions, will later on be able to insert and show posts by their ID</p>
-    © Konrad Płotka of class 2PE of Technikum TEB Edukacja in Koszalin 2023.
+    <h2>Item 8. insertform.php</h2>
+    <p>A simple form asking you for a title and contents of your brand new post.</p>
+    <h2>Item 9. insertscript.php</h2>
+    <p>Takes what you did input and your user ID and sends it off to a database.</p>
+    <h2>Item 10. searchform.php</h2>
+    <p>Simple form that asks you for a post ID.</p>
+    <h2>Item 11. searchscript.php</h2>
+    <p>Searches for a post with the ID you gave to the form.</p>
 </body>
 </html>
