--- a/GenericBlogBetaDocumentationpl.html
+++ b/GenericBlogBetaDocumentationpl.html
@@ -23,8 +23,15 @@
     <p>usuwa dane związane z sesją i powraca do indeksu </p>
     <h2>Element 6. register.php</h2>
     <p>wow rzeczywista strona rejestracji, ma pewne filtry, takie jak 3-8 znaków w nazwie użytkownika? lub co najmniej 8 znaków w haśle</p>
-    <h2>Ostatnia pozycja. utils.php</h2>
+    <h2>Element 7. utils.php</h2>
     <p>Obecnie ma tylko funkcje związane z logowaniem, później będzie można wstawiać i wyświetlać posty według ich identyfikatora</p>
-    © Konrad Płotka z klasy 2PE Technikum TEB Edukacja w Koszalinie 2023.
+    <h2>Element 8. insertform.php</h2>
+    <p>Prosty formularz z prośbą o podanie tytułu i treści nowego posta.</p>
+    <h2>Element 9. insertscript.php</h2>
+    <p>Pobiera wprowadzone dane oraz identyfikator użytkownika i wysyła je do bazy danych.</p>
+    <h2>Element 10. searchform.php</h2>
+    <p>Prosty formularz z prośbą o podanie identyfikatora posta.</p>
+    <h2>Element 11. searchscript.php</h2>
+    <p>Wyszukuje wpis z identyfikatorem podanym w formularzu.</p>
 </body>
 </html>
