--- a/GenericBlogBetaDocumentationen.html
+++ b/GenericBlogBetaDocumentationen.html
@@ -7,31 +7,34 @@
     <title>Generic Blog Beta - Documentation (English)</title>
 </head>
 <body>
-    <h1> Documentation of the generic-blog-beta project </h1>
-    <h2> Item 1. connect.php</h2>
-    <p> Subheading a .: First 4 parts of the code </p>
-    <p> the script establishes 4 connection variables to the blog user database, $ host = "localhost", $ user = "root", $ pass = "", $ dbname = "genericblogbetadatabase" </p>
-    <p> Subb.: Rest of code </p>
-    <p> using the variables in the first lines, the script tries to connect to the database </p>
-    <h2> Item 2. genericblogbetadatabase.sql </h2>
-    <p>it is an user database with a users table containing the id, email, username and password columns. id is the primary key </p>
-    <h2> Item 3. index.php </h2>
-    <p>it is a nonstylized page informing the user that this is an unfinished version of the generic-blog project. there is a link to login to the site or register. could also show a logout link if user is now logged in. </p>
-    <h2> Item 4. login.php </h2>
-    <p> oh wow it is a login page </p>
-    <h2> Item 5. logout.php </h2>
-    <p>unsets session related data and returns you to index </p>
-    <h2>Item 6. register.php</h2>
-    <p>wow an actual registration page, has some filters like 3-8 characters in username?? or at least 8 characters in password</p>
-    <h2>Item 7. utils.php</h2>
-    <p>Currently only has login-related functions, will later on be able to insert and show posts by their ID</p>
-    <h2>Item 8. insertform.php</h2>
-    <p>A simple form asking you for a title and contents of your brand new post.</p>
-    <h2>Item 9. insertscript.php</h2>
-    <p>Takes what you did input and your user ID and sends it off to a database.</p>
-    <h2>Item 10. searchform.php</h2>
-    <p>Simple form that asks you for a post ID.</p>
-    <h2>Item 11. searchscript.php</h2>
-    <p>Searches for a post with the ID you gave to the form.</p>
+    <h1>Documentation of the generic-blog-beta project </h1>
+    <h2>Point 1. 127_0_0_1.sql</h2>
+    <p>This is the data base file you import to the server to have a working database to this project.</p>
+    <h2>Point 2. connect.php</h2>
+    <p>Contains credentials to the database server and attempts a connection.</p>
+    <h2>Point 3. index.php</h2>
+    <p>The main page of this project. Shows some options only to logged in users and has scripts regarding messages about posting or deleting.</p>
+    <h2>Point 4. insertform.php</h2>
+    <p>A simple form with 2 fields that gets the data to insertscript.php.</p>
+    <h2>Point 5. insertscript.php</h2>
+    <p>Gets data from insertform.php and adds it to the posts table of the database. Also sets a session value later read by index.php to display a message.</p>
+    <h2>Point 6. listpostids.php</h2>
+    <p>Checks your user ID against all posts' poster IDs and displays IDs of the posts this matches to.</p>
+    <h2>Point 7. login.php</h2>
+    <p>A login form which also contains login scripts.</p>
+    <h2>Point 8. logout.php</h2>
+    <p>Unsets everything session-related and returns you to index.php.</p>
+    <h2>Point 9. postdeleteform.php</h2>
+    <p>A one-field form that sends its result to postdeletescript.php.</p>
+    <h2>Point 10. postdeletescript.php</h2>
+    <p>Ensures you're deleting a post of your own and if successful, sets a session value later read by index.php to display a message.</p>
+    <h2>Point 11. register.php</h2>
+    <p>A normal registration page with 2 filters: User name must be 3-16 characters, alphanumeric characters and underlines only, and password must be at least 8 characters.</p>
+    <h2>Point 12. searchform.php</h2>
+    <p>postdeleteform.php, except sends it to searchscript.php.</p>
+    <h2>Point 13. searchscript.php</h2>
+    <p>Attempts finding a post of the provided ID and displaying it.</p>
+    <h2>Point 14. utils.php</h2>
+    <p>Login and register-related functions.</p>
 </body>
 </html>
