--- a/GenericBlogBetaDocumentationpl.html
+++ b/GenericBlogBetaDocumentationpl.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generic Blog Beta - Dokumentacja (Polski)</title>
+    <title>Generic Blog - Dokumentacja (Polski)</title>
 </head>
 <body>
-    <h1>Dokumentacja projektu generic-blog-beta </h1>
+    <h1>Dokumentacja projektu generic-blog </h1>
     <h2>Punkt 1. 127_0_0_1.sql</h2>
     <p>To jest plik bazy danych, który importujesz na serwer, aby mieć działającą bazę danych dla tego projektu.</p>
     <h2>Punkt 2. connect.php</h2>
@@ -36,5 +36,9 @@
     <p>Próbuje znaleźć post o podanym identyfikatorze i wyświetlić go.</p>
     <h2>Punkt 14. utils.php</h2>
     <p>Funkcje związane z logowaniem i rejestracją.</p>
+    <h2> Punkt 15. editform.php </h2>
+    <p> pyta o identyfikator postu, który edytujesz, jego nowy tytuł i treść. Wysyła wszystko na editscript.php. </p>
+    <h2> Punkt 16. editscript.php </h2>
+    <p> Zapewnia, że edytowany post należy do Ciebie i aktualizuje go. Ustawia również wartość sesji odczytywaną później przez index.php w celu wyświetlenia komunikatu. </p>
 </body>
 </html>
